# cblock

./: .devcontainer.json  .gitignore  .gitmodules  0.preset  CMakeLists.txt  Control.qml  Dockerfile  Goal.qml  Jenkinsfile  README.md  SOMs.qml  bl.deb  build_linux.sh  build_mac.sh  build_windows_vs2017.bat  cblock_config.json  cblock_letters20x20.json  cgorman.jenkins  config_drawing30x40.json  create_conda_env.cmake  create_qml.txt  development.jenkins  gen_windows_vs2017.bat  local_dev.dockerfile  master.jenkins  requirements.txt  run_BL.bat  sliderTabQmlGenerator.py
cblock_tests/: CMakeLists.txt  main.cpp
cblock_tests/BL_test_utilities/: dialog_helper_functions.cpp  dialog_helper_functions.h  run_in_BL.hpp  runtime_data_generation.cpp  runtime_data_generation.hpp  test_expect_variable_value.cpp  test_expect_variable_value.h
cblock_tests/cblock_dialog/: cblock_dialog.cpp  cblock_dialog_config.json
cblock_tests/cblock_dialog/runtime_data/: 0.preset  Control.qml  Display.qml  SOM_Inspect.qml  create_qml.txt
cblock_tests/cblock_dialog/runtime_data/scene/: training_control.blm  visibility.blc
cblock_tests/cblock_dialog/runtime_data/scene/cblock/: cblockInputs.blm  cblockParams.blm  control_cycle.blc  measures_blc.blc
cblock_tests/cblock_dialog/runtime_data/scripts/: xy_to_loc_som.py.old
cblock_tests/cblock_letters/: cblock_letters.cpp
cblock_tests/cblock_letters/SoulStudioConsoleConfig/: Chunking.json  project.json
cblock_tests/cblock_letters/runtime_data/: SOMs.qml  create_qml.txt  words.txt
cblock_tests/cblock_letters/runtime_data/scene/: config_cblock.blc  control.blm  debug_display.blc  debug_display.old  display_cblock.blc  goal_state_comp_gains_qml.blm  training_control.blm  visibility.blc
cblock_tests/cblock_letters/runtime_data/scene/cblock/: cblockOutputs.blm  connect_Inputs.blc  deb_control_cycle.blm  debug.off
cblock_tests/cblock_letters/runtime_data/scene/debug_displays/: debug_displays.trans
letters_template/: Control.qml  Display.qml  README.md  (+11 more)
source/: CMakeLists.txt  build.sh  build_and_test.sh  cblock_causality_config.json  cblock_letters_config.json  cblock_motor_config.json  create_conda_env.cmake  generate_causality_cblock_runtime.py  generate_letters_runtime.py  generate_new_cblock_runtime.py  requirements.txt  third_party_versions.txt
source/cblock_tests/: CMakeLists.txt  main.cpp
source/cblock_tests/BL_test_utilities/include/: bl_wrapper.hpp  run_in_BL.hpp  runtime_data_generation.hpp  test_expect_variable_value.h
source/cblock_tests/BL_test_utilities/source/: bl_wrapper.cpp  dialog_helper_functions.cpp  run_in_BL.cpp  runtime_data_generation.cpp
source/cblock_tests/dialog/: dialog_tests.cpp
source/cblock_tests/dialog/runtime_data/: scene.blm
source/cblock_tests/dialog/runtime_data/scene/: config_cblock.blc  connect_cblock.blc  debug_display.blc  letters.blm
source/cblock_tests/letters/: cblock_letters_config.json  letters_tests.cpp
source/cblock_tests/letters/runtime_data/scene/: connect_cblock.blc  debug_display.blc  measures2_scrollDisplay.blm
source/misc/: convert_old_config.py  convert_old_template.py  qml_to_config_vars.py
source/misc/display_code/: debug_display.blc  debug_display_consts.blm
source/misc/display_code/debug_displays/: debug_displays.trans
source/misc/display_code/debug_displays/collaborating/: collaborating.frag  collaborating.tex
source/misc/display_code/debug_displays/goal_mode/: goal_mode.trans
source/misc/display_code/displays/plan_som/: displayConstants_blc.blc
source/model_template/: cblockParams.blm  control_cycle.blc  faked_stack.blm  load_dump_input.blm
source/model_template/IO/: asom_save.blm  bitmap_output_som.blm  bitmap_som_consts.blm  input.blm  save_maps_blc.blc  xy_output_som.blm  xy_som_consts.blm
source/model_template/IO/TD_inspection/: control.blm
source/model_template/core/: actual_next_wta.blm  control.blm  interval_LIF.blm  measures_scrollDisplay.blm  prediction_certainty.blm
source/model_template/plan_som/: alpha_gains.blm  asom.blm  outputs.blm
source/model_template/plan_som/TD_inspection/: control.blm
source/model_template/planning/: control.blm  plan_wta.blm  random_generator.blm  set_LIF_speed.blc.OFF
source/model_template/scripts/: reformat_all_constant_modules.py
source/model_template/seq_som/: alpha_gains.blm  asomConsts.blm  asom_save.blm  connect_asom_internal.blc  gains_blc.blc  input_gates.blm
source/model_template/seq_som/TD_inspection/: control.blm
source/model_template/seq_som/dreaming/: combined_wta.blm  loc_mask.blm  manual_tick.blc  manual_tick.blm  ticking.blc
source/model_template_2/cblock/: cblockInputs.blm  cblockOutputs.blm  cblockParams.blm  connect_Inputs.blc  control_cycle.blc  load_dump_output.blm  measures_blc.blc.OFF
source/model_template_2/cblock/IO/: bitmap_input_som.blm  debug_stages.blc  set_som_consts.blc  xy_input_som.blm
source/model_template_2/cblock/IO/TD_inspection/: loc_mask.blm
source/model_template_2/cblock/core/: control.blm  measures_scrollDisplay.blm  normalize_prediction.blm  param_save.csv  prediction_error.blm  seq_buffer.blm
source/model_template_2/cblock/plan_som/: asomConsts.blm  asom_save.blm  connect_asom_internal.blc  inputs.blm  result_component_gains.blm
source/model_template_2/cblock/plan_som/TD_inspection/: loc_mask.blm
source/model_template_2/cblock/planning/: dist_from_goal.blm  goal.blm  goal_buffered.blm  xy_to_loc_som.blm
source/model_template_2/cblock/scripts/: custom_operations_lib.py
source/model_template_2/cblock/seq_som/: asom.blm  connect_dreaming.blc  inputs.blm  outputs.blm
source/model_template_2/cblock/seq_som/dreaming/: control.blm  random_generator.blm  xy_to_loc_som.blm
source/model_template_2/debug_displays/goal_mode/: goal_mode.frag
source/model_template_2/debug_displays/inputs/reward/: reward.trans
source/model_template_2/scripts/: custom_operations_lib.py
source/runtime_data/scene/cblock/: debug_display.blc  display_cblock.blc
source/runtime_data_martin/scene/cblock/: debug_display.blc  debug_display_consts.blm  displayConstants.blm
(+470 files in other folders)
